implemented update service method